added module datatypes, added packages in module-archive